--- a/index.html
+++ b/index.html
@@ -8,26 +8,50 @@
   
   <title>Frontend Mentor | Stats preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <!-- Main Styles: styles.css -->
+  <link rel="stylesheet" href="styles.css">
+
+  <!-- Google Fonts: Inter and Lexend Deca -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
-
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
+  <main>
+    <div class="container">
+      <div class="card">
+        <div class="card-content">
+          <div class="card-content-top">
+            <h2>Get insights that help your business grow.</h2>
+            <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+            experience, and overall efficiency.</p>
+          </div>
+          <div class="card-content-bottom">
+            <div class="column">
+              <h3>10k+</h3>
+              <p>companies</p>
+            </div>
+            <div class="column">
+              <h3>314</h3>
+              <p>templates</p>
+            </div>
+            <div class="column">
+              <h3>12m+</h3>
+              <p>queries</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-image">
+          <img class="pc" src="./images/image-header-desktop.jpg" alt="">
+          <img class="sp" src="./images/image-header-desktop.jpg" alt="">
+        </div>  
+      </div>
+    </div>
+  </main>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
 </body>
 </html>
