fem_stats_preview_card_component: completing pc styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Google Fonts: Inter and Lexend Deca -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Lexend+Deca:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -23,7 +23,7 @@
       <div class="card">
         <div class="card-content">
           <div class="card-content-top">
-            <h2>Get insights that help your business grow.</h2>
+            <h2>Get <span>insights</span> that help your business grow.</h2>
             <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
             experience, and overall efficiency.</p>
           </div>
